# sonarqube-mcp-server

./: .deepsource.toml  .dockerignore  .gitignore  .markdownlint.yaml  .memory.jsonl  .npmrc  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSES.md  README.md  SECURITY.md  changes.md  cleanup.md  config-template.toml  docker-compose.yml  eslint.config.js  jest.config.js  justfile  osv-scanner.toml  package.json  pnpm-lock.yaml  refactoring-plan-original.md  refactoring-plan.md  refactoring.md  sonar-project.properties  test-http-transport.sh  test-plan.md  todo.md  tsconfig.build.json  tsconfig.json  vitest.config.js  vitest.config.js.map  vitest.config.ts
.cargo-husky/hooks/: pre-commit
.changeset/: add-packages-write-permission.md  code-quality-improvements.md  config.json  docker-publish-via-ghcr.md  docker-trivy-scanning.md  evil-berries-hope.md  fail-on-missing-artifact.md  fix-artifact-full-sha.md  fix-artifact-naming.md  fix-artifact-search-retry.md  fix-cross-workflow-artifacts.md  fix-cve-2025-57319.md  fix-docker-artifact-naming.md  fix-docker-build-tsconfig.md  fix-docker-buildx-imagetools.md  fix-docker-buildx-oci-layout.md  fix-docker-workflow-order.md  fix-husky-prod-install.md  fix-multi-platform-docker-push.md  fix-npm-docker-publish.md  fix-npm-prepare-and-docker-oci-proper.md  fix-race-condition.md  fix-trivy-scan.md  http-transport-feature.md  integrate-agentic-toolchain.md  legal-mice-hope.md  publish-artifact-fix.md  test-workflow-fix.md  update-dependencies-2025-01.md  update-dependencies-2025-10.md  update-sonarqube-scanner-v6.md
.claude/commands/: analyze-and-fix-github-issue.md  release.md  spec-feature.md  update-dependencies.md
.github/: WORKFLOWS.md
.github/scripts/: determine-artifact.sh  version-and-release.js
.github/workflows/: ci.yml  codeql.yml  main.yml  pr.yml  publish.yml  release.yml  reusable-docker.yml  reusable-prepare-assets.yml  reusable-security.yml  reusable-setup.yml  reusable-validate.yml  sonarqube.yml
.husky/: pre-commit
.scannerwork/: report-task.txt
analysis/: complexity_analysis.md
docs/: api-reference.md  architecture.md  deployment.md  http-transport.md  idp-integration.md  implementation-plan.md  integration-testing.md  oauth-token-validation.md  performance.md  permission-system.md  research.md  security.md  service-account-management.md  todo.md  troubleshooting.md
examples/: http-client.ts
helm/sonarqube-mcp/: Chart.yaml  values.yaml
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
mcp_sonar/src/: index.ts
scripts/: README.md  actionlint.sh  ci-local.sh  fix-kind-dns.sh  kind-with-internet.yaml  load-test.sh  run-all-tests.sh  scan-container.sh  security-scan.sh  setup.sh  test-helm-values.sh  test-k8s-deployment.sh  test-k8s-helm-deployment.sh  test-monitoring-integration.sh  validate-docs.sh  validate-terraform.sh
src/: api.ts  errors.ts  index.ts  lib.rs  main.rs  sonarqube.ts
src/__tests__/: additional-coverage.test.ts  advanced-index.test.ts  api.test.ts  assign-issue.test.ts  auth-methods.test.ts  boolean-string-transform.test.ts  components.test.ts  dependency-injection.test.ts  direct-handlers.test.ts  direct-lambdas.test.ts  direct-schema-validation.test.ts  environment-validation.test.ts  error-handler.test.ts  error-handling.test.ts  errors.test.ts  function-tests.test.ts  handlers.test.ts  handlers.test.ts.skip  index.test.ts  logger.test.ts  (+34 more)
terraform/: README.md
tests/: args_tests.rs  client_tests.rs  config_tests.rs  coverage_tests.rs  end_to_end_tests.rs  error_tests.rs  helpers.rs  jsonrpc_tests.rs  lifecycle_tests.rs  logging_tests.rs  main_tests.rs  output_test.rs  prompts_tests.rs  query_tests.rs  resources_tests.rs  sonarqube_tools_coverage_tests.rs  sonarqube_tools_tests.rs  sonarqube_types_tests.rs  tools_tests.rs  types_tests.rs  utilities_tests.rs
tmp/: refactoring-summary.md  refactoring.md
(+292 files in other folders)
