[package]
name = "sonarqube-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Marc Tremblay <marc.tremblay@gmail.com>"]
description = "Model Context Protocol (MCP) Server for Sonarqube"
keywords = ["rust", "ai", "mcp", "cli", "sonarqube"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
signal-hook = { version = "0.3", features = ["iterator"] }
tokio = { version = "1.34", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
rpc-router = "0.1.2"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
once_cell = "1.19"
anyhow = "1.0"
ctrlc = "3.4"

[dev-dependencies]
wiremock = "0.5"
tokio-test = "0.4"
scopeguard = "1.2"
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }
grcov = "0.8"
cargo-tarpaulin = "0.27"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
