[package]
name = "sonarqube-mcp-server"
version = "0.2.0-pre"
edition = "2024"
authors = ["Marc Tremblay <marc.tremblay@gmail.com>"]
description = "Model Context Protocol (MCP) Server for Sonarqube"
keywords = ["rust", "ai", "mcp", "cli", "sonarqube"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
signal-hook = { version = "0.3", features = ["iterator"] }
tokio = { version = "1.34", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
rpc-router = "0.1.2"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
once_cell = "1.19"
anyhow = "1.0"
ctrlc = "3.4"
tempfile = "3.9"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
scopeguard = "1.2"
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
