[package]
name = "sonarqube-mcp-server"
version = "0.2.0-pre"
edition = "2024"
authors = ["Marc Tremblay <marc.tremblay@gmail.com>"]
description = "Model Context Protocol (MCP) Server for Sonarqube"
keywords = ["rust", "ai", "mcp", "cli", "sonarqube"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
signal-hook = { version = "0.3", features = ["iterator"] }
tokio = { version = "1.34", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
once_cell = "1.19"
anyhow = "1.0"
ctrlc = "3.4"
tempfile = "3.9"
urlencoding = "2.1"
nix = "0.27.1"
jsonrpsee = { version = "0.21" }
jsonrpsee-core = { version = "0.21" }
jsonrpsee-proc-macros = { version = "0.21" }
jsonrpsee-server = { version = "0.21" }
jsonrpsee-types = { version = "0.21" }
tracing = "0.1"
tracing-subscriber = "0.3"
# Configuration-related dependencies
toml = "0.8"
dirs = "5.0"
# Official MCP SDK
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io", "macros"] }
# JSON Schema support for RMCP
schemars = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
scopeguard = "1.2"
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }
serial_test = "2.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[features]
default = []
test-utils = []
